Release 0.5 (2010-X-X)
- removed obsolete fasttime and TSCI2 support
- libgsl support for advanced stochastic distributions
- added non-standard sockopt MTCP
- bugfixes

Release 0.4a (2010-8-10)
- bugfixes
- block count column

Release 0.4 (2010-8-01)

- traffic generation
- symbolic numbers
- reworked timer system
- reworked rtt calculation
- various bugfixes

Release 0.2.1 (2009-08-07)

- Fix -Q flow option
- Use bits/s as default for rate option, correct documentation on defaults
- Cleanup manpages and integrated usage
- Add description of output columns to manpage
- Make libpcap optional dependency, not enabled by default

Release 0.2 (2009-07-17)

- Using new RPC architacture
- New options syntax

Release 0.1 (2006-11-11)

- Initial Release