@@ -1,3 +1,4 @@
+#include "daemon.h"
 void fg_pcap_init();
 void fg_pcap_go(struct _flow *);
 void fg_pcap_dispatch(void);
